# modservice

./: LICENSE  README.md  pyproject.toml
agent/: plan.md
app/: main.py  modbus_manager.py  models.py
static/: app.js  index.html  styles.css
tests/: test_servers.py
